ejemplos/semana-10.5/ejemplo-del-video/kube-yamls/api-rust-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust-deploy
  labels:
    app: api-rust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
      - name: api-rust
        image: <Link-Ngrok>/api_rust:v1
        imagePullPolicy: Always # Siempre intenta obtener la última imagen por si hay actualizaciones en su codigo e imagenes
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust-service
  labels:
    app: api-rust
spec:
  selector:
    app: api-rust
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
